RESOLVED FIXED 241174
[web-animations] hanging-punctuation should support discrete animation
https://bugs.webkit.org/show_bug.cgi?id=241174
Summary [web-animations] hanging-punctuation should support discrete animation
Tim Nguyen (:ntim)
Reported 2022-06-01 02:08:56 PDT
Attachments
Radar WebKit Bug Importer
Comment 1 2022-06-08 02:11:16 PDT
Tim Nguyen (:ntim)
Comment 2 2024-07-30 11:11:46 PDT
*** Bug 277353 has been marked as a duplicate of this bug. ***
Tim Nguyen (:ntim)
Comment 3 2024-07-30 11:14:39 PDT
EWS
Comment 4 2024-07-30 16:44:47 PDT
Committed 281616@main (5e10aa635779): <https://commits.webkit.org/281616@main> Reviewed commits have been landed. Closing PR #31484 and removing active labels.
Tim Nguyen (:ntim)
Comment 5 2024-07-30 16:53:00 PDT
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/47383
Note You need to log in before you can comment on or make changes to this bug.